--- a/Styles/main.css
+++ b/Styles/main.css
@@ -63,6 +63,7 @@ h2 {
 
 .hero {
   position: relative;
+  height: 80vh;
 }
 
 .hero .text-wrapper {
@@ -236,6 +237,7 @@ a:focus {
   text-align: center;
   text-transform: uppercase;
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 1.5rem;
 
   /* this makes it so the user can select the text, which keeps the cursor from turning into a text selection cursor */
   user-select: none;
@@ -338,6 +340,7 @@ a:focus {
     margin: 0;
     display: block;
     font-size: 2.5rem;
+    line-height: 1.2;
   }
   .overlay {
     position: absolute;
