--- a/Styles/main.css
+++ b/Styles/main.css
@@ -5,7 +5,7 @@
   /* dark blue*/
   --main-color-dark: #00008b;
 
-  /* blues */
+  /* blues **/
   --main-color: #4444fa;
   --main-color-light: #7cbed4;
   --main-color-extra-light: #c4daec;
